# nemostation

./: README.md  codex_context.md
nemotron-agent-demo/: Dockerfile.server  Dockerfile.ui  README.md  autostart_nemotron3.sh  docker-compose.kimik2-nvfp4.yml  docker-compose.nemotron3.yml  docker-compose.yml  llm_client.py  logs_ui.sh  logs_vllm.sh  requirements.txt  (+6 more)
vendors/daystrom_memory_lattice_alpha1/: Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml  setup.py  visualize_dml_live.py
vendors/daystrom_memory_lattice_alpha1/app/: ace_agent_demo.py  dml_service.py
vendors/daystrom_memory_lattice_alpha1/bench/: bench_dml_vs_rag.py
vendors/daystrom_memory_lattice_alpha1/cma/: __init__.py  cli.py  compressors.py  mcp_server.py  utils.py
vendors/daystrom_memory_lattice_alpha1/daystrom_dml/: __init__.py  api_client.py  cli.py  config.py  config.yaml  dml_adapter.py  gpt_runner.py  memory_store.py  router.py  server.py  settings.py  visualizer_bridge.py
vendors/daystrom_memory_lattice_alpha1/daystrom_dml/tests/: test_dml.py  test_maintenance.py  test_production.py  test_query.py  test_server_api.py  test_server_visualizer.py  test_summary_cache.py  test_vector_backend.py
vendors/daystrom_memory_lattice_alpha1/daystrom_dml/web/: index.html  visualizer.html  visualizer.js
vendors/daystrom_memory_lattice_alpha1/mcp/: dml_mcp_server.py
vendors/daystrom_memory_lattice_alpha1/nim/: README.md
vendors/daystrom_memory_lattice_alpha1/scripts/: download_models.py
vendors/daystrom_memory_lattice_alpha1/tests/: test_api_client.py  test_cma.py  test_embeddings.py  test_gpt_runner.py  test_health_endpoint.py  test_mcp_stub.py  test_metrics.py  test_rag_store.py  test_router.py  test_utils.py
(+76 files in other folders)
