[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "pybind11>=2.10",
    "numpy>=1.24",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["nim*", "tests*", "daystrom_dml.tests*"]

[tool.setuptools.package-data]
"daystrom_dml" = [
    "web/*",
    "web/**/*",
]

[project]
name = "cma"
version = "0.1.0"
description = "Concept Memory Adapter providing lossy associative memory for LLMs"
readme = "README.md"
authors = [{name="CMA Authors", email="cma@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "fastapi>=0.100",
    "requests>=2.31",
    "numpy>=1.24",
    "openai>=1.0",
    "PyYAML>=6.0",
    "pydantic>=1.10",
    "pydantic-settings>=2.0",
    "prometheus_client>=0.16",
    "structlog>=23.2",
    "httpx>=0.26",
    "pypdf>=4.0",
    "python-multipart>=0.0.6",
]
[project.optional-dependencies]
server = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "python-multipart>=0.0.6",
    "pypdf>=4.0",
    "httpx>=0.26",
    "websockets>=11.0",
]
tokenizer = ["tiktoken>=0.4"]
embeddings = ["sentence-transformers>=2.2"]
faiss = ["faiss-cpu>=1.7"]
multiplex_rag = [
    "chromadb>=0.4",
    "faiss-cpu>=1.7",
]
mcp = ["mcp>=0.1.0"]
playground = [
    "streamlit>=1.39",
    "plotly>=5.22",
]
cuda = ["pybind11>=2.10"]
dev = [
    "pytest>=7.4",
    "ruff>=0.1.9",
    "mypy>=1.6.0",
]

[project.scripts]
cma = "cma.cli:app"
dml-server = "daystrom_dml.server:main"
dml-mcp-server = "mcp.dml_mcp_server:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
